salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/SmartDocs_Field_Map__c.object-meta.xml
<CustomObject>
    <label>SmartDocs Field Map</label>
    <nameField>
        <label>Field Map Name</label>
        <type>AutoNumber</type>
        <displayFormat>SDF-{0000}</displayFormat>
    </nameField>
    <pluralLabel>SmartDocs Field Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>