salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <type>Text</type>
    <length>100</length>
</CustomField>