salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/Child_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship__c</fullName>
    <label>Child Relationship Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>