salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Lookup</type>
    <referenceTo>SmartDocs_Data_Source__c</referenceTo>
    <relationshipName>Field_Maps</relationshipName>
    <relationshipLabel>Field Maps</relationshipLabel>
</CustomField>