salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/Is_Child_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Relationship__c</fullName>
    <label>Child Relationship</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>