salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/SmartDocs_Template_Mapping__c.field-meta.xml
<CustomField>
    <fullName>SmartDocs_Template_Mapping__c</fullName>
    <label>Template Mapping</label>
    <type>MasterDetail</type>
    <referenceTo>SmartDocs_Template_Mapping__c</referenceTo>
    <relationshipName>SmartDocs_Field_Maps</relationshipName>
    <relationshipLabel>Field Maps</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>