salesforce/force-app/main/default/objects/SmartDocs_Field_Map__c/fields/Template_Field__c.field-meta.xml
<CustomField>
    <fullName>Template_Field__c</fullName>
    <label>Template Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>